# DBMS-Benchmarker

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Evaluation-Demo.ipynb  Evaluation-Demo.py  MANIFEST.in  OLD_setup.py  README.md  benchmark.py  dashboard.py  demo-interactive-benchmarking.py  demo-interactive-inspection-legacy.py  demo-interactive-inspection.py  evaluate.py  inspect.resultsets.py  layout.py  merge.py  metrics.evaluation.py  metrics.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  test-result.py  test-result.py.py
.github/workflows/: draft-pdf.yml  publish-to-test-pypi.yml  rebuild_docs.yml
assets/: styles.css
dbmsbenchmarker/: __init__.py  __version__.py  benchmarker.py  evaluator.py  inspector.py  layout.py  monitor.py  parameter.py  reporter.py  tools.py
dbmsbenchmarker/__pycache__/: .gitignore
dbmsbenchmarker/latex/pagePerQuery/: appendix  appendixquery  query  reportFoot  reportHead  timer
dbmsbenchmarker/latex/simple/: appendix  appendixquery  query  reportHead  timer
dbmsbenchmarker/scripts/: __init__.py  cli.py  dashboardcli.py  inspect.py
dev/: merge_measures.py
docs/: CONTRIBUTING.md  Concept.drawio  Concept.html  Concept.md  DBMS.md  Dashboard.html  Dashboard.md  Docs.md  Docs_old.md  Evaluation-Cubes.drawio  Evaluations.html  Evaluations.md  Example-TPC-H.md  Inspection.html  Inspection.md  Options.html  Options.md  Usage.md  Usecases.md  conf.py  images.rst  index.rst  requirements.txt
docs/dbmsbenchmarker/: benchmarker.html  index.html  inspector.html  monitor.html  parameter.html  reporter.html  tools.html
example/: connections.config  queries.config
example/basic/: connections.config  queries.config
example/demo/: connections.config  queries.config
example/tpc-ds/: queries.config
example/tpc-h/: queries-tpch-DBMS.config  queries-tpch.config  queries.config
